# RISET_ROBOT_BECKHOFF

./: 1_start_autorun.sh  2_stop_autorun.sh  3_restart_autorun.sh  4_rostopic_stm2pc  icast.cfg  run.sh
config/IRIS2/: dynamic_conf.yaml  dynamic_conf.yaml.save  static_conf.yaml
config/IRIS3/: dynamic_conf.yaml  motor.yaml  static_conf.yaml
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: iris_msgs.pc
devel/share/iris_msgs/cmake/: iris_msgs-msg-extras.cmake  iris_msgs-msg-paths.cmake  iris_msgsConfig.cmake
doc/: README.md  master.md
src/communication/: CMakeLists.txt  package.xml
src/communication/include/communication/: comm_icast.hpp
src/communication/launch/: communication.launch  communication.launch.save
src/communication/src/: comm_icast.cpp  comm_multicast.cpp
src/hardware/: CMakeLists.txt  package.xml
src/hardware/include/hardware/: beckhoff_ec.hpp  motor_rs232.hpp  rs232.h  stm_ballhandling.hpp  stm_serial.hpp  stm_udp.hpp  stm_udp_2023.h
src/hardware/launch/: hardware.launch  hardware.launch.save  motor.launch
src/hardware/src/: beckhoff_ec.cpp  motor.cpp  motor_main.cpp  motor_rs.cpp  motor_rs232.cpp  other_stm_ballhandling.cpp  rs232.c  stm_ballhandling.cpp  stm_main.cpp  stm_serial.cpp  stm_udp.cpp  stm_udp_2023.cpp
src/iris_msgs/: CMakeLists.txt  package.xml
src/iris_msgs/msg/: bs2pc.msg  data_robots.msg  goalpost.msg  pc2stm.msg  stm2pc.msg  vision_status.msg
src/iris_msgs/srv/: CamOffset.srv  CameraConfig.srv  YuvThresholdInit.srv
src/master/: CMakeLists.txt  package.xml
src/master/include/master/: enums.hpp  master.hpp  master_other_robot.hpp  motion.hpp  motion_other_robot.hpp  pid.h  utils.hpp
src/master/include/master/roles/: abstract.hpp  attacker.hpp  defender.hpp  goalkeeper.hpp
src/master/include/master/utils/keyboard_input/: keyboard_input.hpp
src/master/launch/: launcher.launch
src/master/script/: http_server.py
src/master/src/: master.cpp  master_def_other_robot.cpp  master_definition.cpp  motion.cpp  motion.cpp.bak  motion_other_robot.cpp  s_velocity_profile_generator.cpp  utils.cpp
src/master/src/roles/: attacker.cpp  attacker_other_robot.cpp  backup.txt  defender.cpp  defender_b.cpp  goalkeeper.cpp
src/master/www/: ambil_data.html  ball.html  field.html  goalkeeper.html  grapher.html  hmi.html  index.html  index2.html  index3.html  index_bckup.html  kalibrasi.html  lapangan.html  line.html  new.html  passingpoints.html  positioning.html  potential.html  realsense.html  regresi.html  virtual_points.html  world_model.html
src/master/www/css/: controlbox.css  index.min.css  main.css
src/master/www/glsl/: potential.glsl
src/master/www/js/: ball.js  field.js  field2.js  goalkeeper.js  grapher.js  index.js  index.min.js  lapangan.js  line.js  main.js  main2.js  main3.js  new.js  passingpoints.js  positioning.js  potential.js  realsense.js  regresi.js  route.js  virtual_points.js  world_model.js
src/master/www/js/lib/: fabric.js
src/vision/: CMakeLists.txt  package.xml
src/vision/include/vision/: detection2.hpp  utils.hpp
src/vision/launch/: vision.launch
src/vision/src/: capture.cpp  capture_2.cpp  detection.cpp  detection2.cpp  detection2_other_robot.cpp  main.cpp  web_adapter.cpp
src/web_ui/: index.html  index.js  index2.html  tes.html
src/world_model/: CMakeLists.txt  package.xml
src/world_model/include/world_model/: ball.hpp  enums.hpp  goalpost.hpp  kf_1d_v_const.h  line.hpp  line_icp.hpp  obs.hpp  pose_estimator.hpp  utils.hpp
src/world_model/launch/: world_model.launch
src/world_model/src/: ball.cpp  goalpost.cpp  goalpost_other_robot.cpp  line.cpp  line_icp.cpp  obs.cpp  pose_estimator.cpp  pose_estimator_motor.cpp  positioning_2023.cpp  positioning_2024.cpp
